Fix wrapping for 640px window width

--- a/styles/tablet.css
+++ b/styles/tablet.css
@@ -326,6 +326,7 @@
 	.view-settings {
 		display: flex;
 		flex-direction: row;
+		flex-wrap: wrap;
 		justify-content: space-between;
 		box-sizing: border-box;
 	}
